force-app/main/default/objects/Product_Management__c/Product_Management__c.object-meta.xml
<CustomObject>
    <label>Product Management</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>