force-app/main/default/objects/Product_Management__c/fields/ATM_Fee_in_other_currencies__c.field-meta.xml
<CustomField>
    <fullName>ATM_Fee_in_other_currencies__c</fullName>
    <label>ATM Fee in other currencies</label>
    <length>20</length>
    <type>Text</type>
</CustomField>