force-app/main/default/objects/Product_Management__c/fields/Cost_per_Calendar_Month__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Calendar_Month__c</fullName>
    <label>Cost per Calendar Month</label>
    <length>20</length>
    <type>Text</type>
</CustomField>